[FIX] Brand Guidelines spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -32,6 +32,13 @@ body .content-root {
 	margin-left: auto;
 }
 
+/* Brand Guidelines */
+
+.brand_guidelines .content-root {
+	margin: 0 auto;
+	padding: 0 !important;
+}
+
 @media (min-width: 768px) {
 	.menubar {
 		right: 794px;
